# openssl-cmake

./: .gitignore  CMakeLists.txt
cmake/: acquire_jom.cmake  acquire_nasm.cmake  acquire_perl.cmake  detect_target_architecture.cmake  detect_target_compiler.cmake  download_openssl.cmake
cmake/acquire_perl/: android.cmake  linux.cmake  mingw.cmake  msvc.cmake
cmake/detect_compiler/: android.cmake  linux.cmake  windows.cmake
prj/android/: settings.gradle.kts
prj/android/app/: build.gradle.kts
prj/android/app/src/androidTest/java/com/bn3monkey/openssl_cmake/: BuildTest.kt  ExampleInstrumentedTest.kt
prj/android/app/src/main/: AndroidManifest.xml
prj/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
prj/android/app/src/main/java/com/bn3monkey/openssl_cmake/: MainActivity.kt  TestClass.kt
prj/android/app/src/main/res/values/: strings.xml  themes.xml
prj/android/app/src/main/res/values-night/: themes.xml
prj/android/app/src/test/java/com/bn3monkey/openssl_cmake/: ExampleUnitTest.kt
prj/android/gradle/wrapper/: gradle-wrapper.properties
prj/windows/: .gitignore  CMakeLists.txt  main.cpp
